[需求/BUG]:优化ngx配置文件，启用reuseport[内核 3.9+以上才可以使用]
[模块]:ngx.conf

[说明]:版本更新：1.7.1.15

--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -5,7 +5,7 @@ user nobody nobody;
 
 # CPU 的亲源等
     worker_processes  auto;
-    #worker_cpu_affinity  0001 0010 0100 1000;
+    worker_cpu_affinity  auto;
 
     worker_rlimit_nofile 100000;
     # ulimit -n 关联
@@ -21,6 +21,7 @@ user nobody nobody;
 events {
     use epoll;
     accept_mutex off;   #关闭惊群
+    # reuseport open Linux 3.9+
     worker_connections 65535; #根据你的机器配置
     multi_accept on;
 }
@@ -93,7 +94,7 @@ http {
 
     # http localhost
     server {
-        listen  80 default;
+        listen  80 default reuseport;
         server_name localhost;
         #root html;
         #access_log  logs/access.log main;
