--- a/conf/waf.conf
+++ b/conf/waf.conf
@@ -47,7 +47,7 @@ log_by_lua_file /opt/openresty/openstar/log.lua;
 
 server {
 
-        listen  5460;
+        listen  5460 reuseport;
         server_name localhost5460;
 
         default_type application/json;
